@@ -25,5 +25,6 @@ idle_pc-c3640 = 0x604f8134
 idle_pc-c7200 = 0x606e8a34
 
 [lxc]
-union_type = overlayfs
+#union_type = overlayfs
+union_type = aufs
 aa_unconfined=no
